Fixing contrast in links and footer.

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,10 @@ header {
     border-radius: 30px 30px 30px 30px;
 }
 
+a {
+   color: #2EEFAF;  
+}
+
 /* Default. One colum. */
 main {
 	max-width: 767px;
